spring api: user repo test refactor